--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -83,11 +83,6 @@ In a postbreeding census, the first age class would comprise newborn individuals
 We refer to newborn individuals with a subscript of zero; as a result, our lifetables and postbreeding Leslie models will look different from most textbooks, which assign newborns to "age class one" and use a subscript of one.
 
 ## Ensuring that the fertility coefficient spans a full timestep
-In a life table (e.g., Table \ref{tab:lifetable}, age specific survival and birth rates look as if they should make equivalent contributions to a population model. 
-But there is an important difference: survival (which we donote $\sigma_x$ for Leslie models and $\sigma_i$ for Lefkovitch models, where $x$ is the age and $i$ is stage) represents the fraction of individuals in class $x$ that survive for a full timestep, from time $t$ to time $t+1$. 
-In contrast, the birth rate (typically denoted $b_x$ or $m_x$; we use the former) is instantaneous: it is the average number of offspring produced at time $t$ by an individual that is alive at time $t$. 
-It is tempting to draw a life cycle graph like the one in Fig. \@ref(fig:lifecycles)a (and we commonly see that in the literature). 
-While this works as a *conceptual* diagram, translating it directly into an MPM by coverting each arrow in the graph into a matrix element is incorrect: each element in the matrix must span a timestep, and $m_x$ does not accomplish that. 
 ```{r lifetable, results='markup', echo=FALSE}
 ### Make and display a sample life table
 sample_life_table <- data.frame(
@@ -114,6 +109,13 @@ knitr::kable(sample_life_table, escape = FALSE,
              class names (see text), the table may look slightly
              different from those in many textbooks.")
 ```
+
+
+In a life table (e.g., Table \ref{tab:lifetable}, age specific survival and birth rates look as if they should make equivalent contributions to a population model. 
+But there is an important difference: survival (which we donote $\sigma_x$ for Leslie models and $\sigma_i$ for Lefkovitch models, where $x$ is the age and $i$ is stage) represents the fraction of individuals in a class ($x$ or $i$) that survive for a full timestep, from time $t$ to time $t+1$. 
+In contrast, the birth rate (which we denote $b_x$ for age-structured demography and $b_i$ for stage-structured demography) is instantaneous: it is the average number of offspring produced at time $t$ by an individual that is alive at time $t$. 
+It is tempting to draw a life cycle graph like the one in Fig. \@ref(fig:lifecycles)a (and we commonly see that in the literature). 
+While this works as a *conceptual* diagram, translating it directly into an MPM by coverting each arrow in the graph into a matrix element is incorrect: each element in the matrix must span a timestep, and $m_x$ does not accomplish that. 
 
 ```{r lifecycles, echo=FALSE, warning=FALSE, message=FALSE, fig.cap='Four life cycle graphs that might (or might not) represent the life table in Table 1. (a) A "naive" representation that associates each arrow with a vital rate. This fails to account for the fact that the fertility coefficients must span a timestep and therefor include a survival term. (b) A pre-breeding census representation, in which the youngest censused class is Age 1 and the adult birth rate is multiplied by newborn survival. (c) A post-breeding census representation, in which the adult burth rate is correctly multiplied by adult survival, but which fails to account for the fact that Age 2 individuals will have reproduced (as adults) just prior to the next census. (d) A correct post-breeding census representation.'}
 library(diagram)
@@ -198,7 +200,7 @@ par(op)
 
 To get the timestep in there, $b_x$ needs to be multiplied by a survival term---either that of the parent or of the offspring. 
 For a pre-breeding census model, the fertility coefficient is $F_x = b_x \sigma_0$: the parent, in class $x$, produces $b_x$ offspring immediately after the census, and then these offspring survive to the end of the timestep at rate $\sigma_0$ (Fig. \@ref(fig:lifecycles)b). 
-For an annual timestep, $F_x$ represents the number of one-year-olds next year produced by an individual in class $x$ this year. 
+For an annual timestep, $F_x$ represents the number of one-year-olds next year produced by an individual of age $x$ this year. 
 
 In a post-breeding census, the parent (which will have just reproduced if it is already an adult) must survive for a timestep, aging by a timestep and possibly maturing into a new class, and then reproduces with a birth rate appropriate to its class at the end of the timestep. 
 If we use $x'$ to denote the parent's class at time $t+1$, then the fertility coefficient is $F_x = \sigma_x b_{x'}$ (Fig. \@ref(fig:lifecycles)d). For an annual timestep, $F_x$ is the number of zero-year-olds (newborns) next year produced next year by an individual that was in class $x$ this year. 
@@ -219,12 +221,14 @@ However, this convention cannot be maintained when moving from age-structured to
 
 The simplest stage-structured model has newborns, a nonreproductive juvenile class that spans multiple timesteps, and reproductive adults (Fig. \@ref(fig:SScycles)).
 Within the juvenile class, some individuals remain juveniles in the next timestep (should they survive), whereas others mature into adults.
-If $\gamma_j$ is the fraction surviving individuals that mature ("grow") at the end of the timestep, then the Juvenile--Juvenile transition is given by $P_j = \sigma_j (1-\gamma_j)$ and the Juvenile--Adult transition is given by $G_j = \sigma_j \gamma_j$. 
+If $\gamma_J$ is the fraction surviving individuals that mature ("grow") at the end of the timestep, then the Juvenile--Juvenile transition is given by $P_J = \sigma_J (1-\gamma_J)$ and the Juvenile--Adult transition is given by $G_J = \sigma_J \gamma_J$. 
 This is true for both pre-breeding and post-breeding census models.
 However, for the latter, the individuals that made the Juvenile--Adult transition were already adults at the just-passed breeding season, and hence have had their first opportunity to reproduce.
-Thus we need a fertility coefficient leading out of the juvenile class---$F_j = G_j b_a$---which again seems to defy common sense.
+Thus we need a fertility coefficient leading out of the juvenile class---$F_J = G_J b_A$---which again seems to defy common sense.
 There is no way to finesse this in the way that has been done in age-structured models: if we classify individuals by their stage at their next birthday, so that the maturing individuals are called "adults," then we impose a constraint that individuals in the last year of the juvenile stage have the same survival as adults, which often isn't accurate.
 There are further obstacles to any attempted finesse in more complicated models in which individuals can "mature" into more than one subsequent class.
+
+
 
 ```{r SScycles, echo=FALSE, warning=FALSE, message=FALSE, fig.cap='Four life cycle graphs that might (or might not) represent stage structured life table in Table 1. (a) A "naive" representation that associates each arrow with a vital rate. This fails to account for the fact that the fertility coefficients must span a timestep and therefor include a survival term. (b) A pre-breeding census representation, in which the youngest censused class is the juvenile stage and the adult birth rate is multiplied by newborn survival. (c) A post-breeding census representation, in which the adult burth rate is correctly multiplied by adult survival, but which fails to account for the fact that the maturing juveniles will have reproduced (as adults) just prior to the next census. (d) A correct post-breeding census representation.'}
 library(diagram)
@@ -251,11 +255,11 @@ arr.length = 0.3
 mat1 <- as.data.frame(
   matrix(nrow = 3, ncol = 3, byrow = TRUE, data = 0)
 )
-mat1[[2,1]] <- "sigma[n]"
-mat1[[2,2]] <- "P[j]"
-mat1[[3,2]] <- "G[j]"
-mat1[[3,3]] <- "sigma[a]"
-mat1[[1,3]] <- "b[a]"
+mat1[[2,1]] <- "sigma[N]"
+mat1[[2,2]] <- "P[J]"
+mat1[[3,2]] <- "G[J]"
+mat1[[3,3]] <- "sigma[A]"
+mat1[[1,3]] <- "b[A]"
 curves <- matrix(0, 3, 3)
 curves[2,1] <- curves[3,2] <- 0.1
 curves[1,3] <- 0.5
@@ -269,7 +273,7 @@ plotmat(mat1, name = class_names, pos = pos, curve = curves,
 
 # Pre-breeding census 
 mat2 <- mat1[-1,-1]
-mat2[[1,2]] <- "b[a] * sigma[n]"
+mat2[[1,2]] <- "b[A] * sigma[N]"
 curves2 <- curves[-1,-1]
 curves2[1,2] <- 0.5
 
@@ -283,7 +287,7 @@ plotmat(mat2, name = class_names[-1], pos = pos-1, curve = curves2,
 
 # Incorrect post-breeding census
 mat3 <- mat1
-mat3[[1,3]] <- "sigma[a] * b[a]"
+mat3[[1,3]] <- "sigma[A] * b[A]"
 plotmat(mat3, name = class_names, pos = pos, curve = curves, 
         self.shiftx = self.shiftx, self.shifty = self.shifty, 
         self.lwd = self.lwd, self.cex = self.cex, 
@@ -294,7 +298,7 @@ plotmat(mat3, name = class_names, pos = pos, curve = curves,
 
 # Correct post-breeding census
 mat4 <- mat3
-mat4[[1,2]] <- "G[j] * b[a]"
+mat4[[1,2]] <- "G[J] * b[A]"
 curves[1,2] <- curves[1,3]
 plotmat(mat4, name = class_names, pos = pos, curve = curves, 
         self.shiftx = self.shiftx, self.shifty = self.shifty, 
